--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
           <h2 class="features-title">Our features</h2>
           <ul class="features-list list">
             <li class="item">
+              <span class="item-icon">
+                <svg class="" with="64" height="64">
+                  <use href="./images/sprite.svg.svg#icon-antennasvg"></use>
+                </svg>
+              </span>
               <h3 class="features-item">Strategy</h3>
               <p class="features-text">
                 Our goal is to identify the business problem to walk away with
@@ -73,6 +78,11 @@
               </p>
             </li>
             <li class="item">
+              <span class="item-icon">
+                <svg class="" with="64" height="64">
+                  <use href="./images/sprite.svg.svg#icon-clocksvg"></use>
+                </svg>
+              </span>
               <h3 class="features-item">Punctuality</h3>
               <p class="features-text">
                 Bring the key message to the brand's audience for the best price
@@ -80,6 +90,11 @@
               </p>
             </li>
             <li class="item">
+              <span class="item-icon">
+                <svg class="" with="64" height="64">
+                  <use href="./images/sprite.svg.svg#icon-diagramsvg"></use>
+                </svg>
+              </span>
               <h3 class="features-item">Diligence</h3>
               <p class="features-text">
                 Research and confirm brands that present the strongest digital
@@ -87,6 +102,11 @@
               </p>
             </li>
             <li class="item">
+              <span class="item-icon">
+                <svg class="" with="64" height="64">
+                  <use href="./images/sprite.svg.svg#icon-astronautsvg"></use>
+                </svg>
+              </span>
               <h3 class="features-item">Technologies</h3>
               <p class="features-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -319,56 +339,95 @@
           <h4 class="customers-title">Customers</h4>
           <ul class="customers-list">
             <li class="customers-item list">
-              <a href="" class="customers-link">
-                <svg class="customers-icon" with="104" heigt="56">
+              <a href="" class="customers-link ocean-partner">
+                <svg class="customers-icon">
                   <use href="./images/sprite.svg.svg#icon-logo1svg"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item list">
-              <a href="" class="customers-link">
-                <svg class="customers-icon" with="10" heigt="56">
+              <a href="" class="customers-link ocean-partner">
+                <svg class="customers-icon">
                   <use href="./images/sprite.svg.svg#icon-logo2svg"></use>
                 </svg>
               </a>
             </li>
-            <li class="customers-item list"></li>
-            <a href="" class="customers-link">
-              <svg class="customers-icon" with="104" heigt="56">
-                <use href="./images/sprite.svg.svg#icon-logo3svg"></use>
-              </svg>
-            </a>
-            <li class="customers-item list"></li>
-            <a href="" class="customers-link">
-              <svg class="customers-icon" with="104" heigt="56">
-                <use href="./images/sprite.svg.svg#icon-logo4svg"></use>
-              </svg>
-            </a>
-            <li class="customers-item list"></li>
-            <a href="" class="customers-link">
-              <svg class="customers-icon" with="104" heigt="56">
-                <use href="./images/sprite.svg.svg#icon-logo5svg"></use>
-              </svg>
-            </a>
-            <li class="customers-item list"></li>
-            <a href="" class="customers-link">
-              <svg class="customers-icon" with="104" heigt="56">
-                <use href="./images/sprite.svg.svg#icon-logo6svg"></use>
-              </svg>
-            </a>
+            <li class="customers-item list">
+              <a href="" class="customers-link ocean-partner">
+                <svg class="customers-icon">
+                  <use href="./images/sprite.svg.svg#icon-logo3svg"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item list">
+              <a href="" class="customers-link ocean-partner">
+                <svg class="customers-icon">
+                  <use href="./images/sprite.svg.svg#icon-logo4svg"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item list">
+              <a href="" class="customers-link ocean-partner">
+                <svg class="customers-icon">
+                  <use href="./images/sprite.svg.svg#icon-logo5svg"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item list">
+              <a href="" class="customers-link ocean-partner">
+                <svg class="customers-icon">
+                  <use href="./images/sprite.svg.svg#icon-logo6svg"></use>
+                </svg>
+              </a>
+            </li>
           </ul>
         </div>
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <a class="footer-logo logo" href="./index.html"
-          ><span class="accent">Web</span>Studio</a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-group">
+        <div class="foter-left-side">
+          <a class="footer-logo logo" href="./index.html"
+            ><span class="accent">Web</span>Studio</a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-right-side">
+          <h4 class="foter-right-title">Social media</h4>
+          <ul class="foter-right-list">
+            <li class="footer-social-item list">
+              <a href="" class="footer-social-link green">
+                <svg class="footer-social-icon" with="24" height="24">
+                  <use href="./images/sprite.svg.svg#icon-instagramsvg"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item list">
+              <a href="" class="footer-social-link green">
+                <svg class="footer-social-icon" with="24" height="24">
+                  <use href="./images/sprite.svg.svg#icon-twittersvg"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item list">
+              <a href="" class="footer-social-link green">
+                <svg class="footer-social-icon" with="24" height="24">
+                  <use href="./images/sprite.svg.svg#icon-facebooksvg"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item list">
+              <a href="" class="footer-social-link green">
+                <svg class="footer-social-icon" with="24" height="24">
+                  <use href="./images/sprite.svg.svg#icon-linkedinsvg"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
