--- a/portfolio.html
+++ b/portfolio.html
@@ -167,8 +167,9 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
-      <div class="container">
+      <footer class="footer">
+      <div class="container footer-group"> 
+        <div class="foter-left-side">
         <a class="footer-logo logo" href="./index.html"
           ><span class="accent">Web</span>Studio</a
         >
@@ -176,7 +177,42 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
-      </div>
+        </div>
+        <div class="footer-right-side">
+          <h4 class="foter-right-title">Social media</h4>
+          <ul class="foter-right-list" >
+            <li class="footer-social-item list">
+              <a href="" class="footer-social-link green">
+                <svg class="footer-social-icon" with="24" height="24">
+                  <use href="./images/sprite.svg.svg#icon-instagramsvg"></use>
+                </svg>
+              </a>
+
+            </li>
+            <li class="footer-social-item list">
+            <a href="" class="footer-social-link green">
+                <svg class="footer-social-icon" with="24" height="24">
+                  <use href="./images/sprite.svg.svg#icon-twittersvg"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item list">
+            <a href="" class="footer-social-link green">
+                <svg class="footer-social-icon" with="24" height="24">
+                  <use href="./images/sprite.svg.svg#icon-facebooksvg"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item list">
+            <a href="" class="footer-social-link green">
+                <svg class="footer-social-icon" with="24" height="24">
+                  <use href="./images/sprite.svg.svg#icon-linkedinsvg"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+          </div>
+        </div>
     </footer>
   </body>
 </html>
