--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <ul class="features-list list">
             <li class="item">
               <span class="item-icon">
-                <svg class="" with="64" height="64">
+                <svg class="icon" width="64" height="64">
                   <use href="./images/sprite.svg.svg#icon-antennasvg"></use>
                 </svg>
               </span>
@@ -79,7 +79,7 @@
             </li>
             <li class="item">
               <span class="item-icon">
-                <svg class="" with="64" height="64">
+                <svg class="icon" width="64" height="64">
                   <use href="./images/sprite.svg.svg#icon-clocksvg"></use>
                 </svg>
               </span>
@@ -91,7 +91,7 @@
             </li>
             <li class="item">
               <span class="item-icon">
-                <svg class="" with="64" height="64">
+                <svg class="icon" width="64" height="64">
                   <use href="./images/sprite.svg.svg#icon-diagramsvg"></use>
                 </svg>
               </span>
@@ -103,7 +103,7 @@
             </li>
             <li class="item">
               <span class="item-icon">
-                <svg class="" with="64" height="64">
+                <svg class="icon" width="64" height="64">
                   <use href="./images/sprite.svg.svg#icon-astronautsvg"></use>
                 </svg>
               </span>
